Unmark useless strings as translatable.

--- a/src/vmm-create-pool.glade
+++ b/src/vmm-create-pool.glade
@@ -172,7 +172,7 @@
                             <property name="yalign">0</property>
                             <property name="xpad">3</property>
                             <property name="ypad">6</property>
-                            <property name="label" translatable="yes">label</property>
+                            <property name="label" translatable="no">label</property>
                             <property name="wrap">True</property>
                           </widget>
                         </child>
