--- a/src/vmm-create-vol.glade
+++ b/src/vmm-create-vol.glade
@@ -180,7 +180,7 @@
                                 <child>
                                   <widget class="GtkLabel" id="vol-parent-name">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">(parent-name)</property>
+                                    <property name="label" translatable="no">(parent-name)</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -202,7 +202,7 @@
                                 <child>
                                   <widget class="GtkLabel" id="vol-parent-space">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">(space)</property>
+                                    <property name="label" translatable="no">(space)</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
