--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -220,7 +220,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-cad">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+Backspace</property>
+                        <property name="label" translatable="no">Ctrl+Alt+Backspace</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_cad_activate"/>
                       </widget>
@@ -228,7 +228,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-cad1">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+Delete</property>
+                        <property name="label" translatable="no">Ctrl+Alt+Delete</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_cad_activate"/>
                       </widget>
@@ -241,7 +241,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf1">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F1</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F1</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf1_activate"/>
                       </widget>
@@ -249,7 +249,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf2">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F2</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F2</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf2_activate"/>
                       </widget>
@@ -257,7 +257,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf3">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F3</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F3</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf3_activate"/>
                       </widget>
@@ -265,7 +265,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf4">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F4</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F4</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf4_activate"/>
                       </widget>
@@ -273,7 +273,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf5">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F5</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F5</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf5_activate"/>
                       </widget>
@@ -281,7 +281,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf6">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F6</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F6</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf6_activate"/>
                       </widget>
@@ -289,7 +289,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf7">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F7</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F7</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf7_activate"/>
                       </widget>
@@ -297,7 +297,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf8">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F8</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F8</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf8_activate"/>
                       </widget>
@@ -305,7 +305,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf9">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F9</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F9</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf9_activate"/>
                       </widget>
@@ -313,7 +313,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf10">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F10</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F10</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf10_activate"/>
                       </widget>
@@ -321,7 +321,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf11">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F11</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F11</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf11_activate"/>
                       </widget>
@@ -329,7 +329,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-caf12">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Ctrl+Alt+F12</property>
+                        <property name="label" translatable="no">Ctrl+Alt+F12</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_caf12_activate"/>
                       </widget>
@@ -342,7 +342,7 @@
                     <child>
                       <widget class="GtkMenuItem" id="details-menu-send-printscreen">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">PrintScreen</property>
+                        <property name="label" translatable="no">PrintScreen</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_details_menu_send_printscreen_activate"/>
                       </widget>
@@ -1897,7 +1897,7 @@
                                       <widget class="GtkLabel" id="disk-target-type">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">disk	</property>
+                                        <property name="label" translatable="no">disk	</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -2770,7 +2770,7 @@
                                       <widget class="GtkLabel" id="sound-model">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">insert sound model</property>
+                                        <property name="label" translatable="no">insert sound model</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -3066,7 +3066,7 @@
                                       <widget class="GtkLabel" id="hostdev-type">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label</property>
+                                        <property name="label" translatable="no">label</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -3078,7 +3078,7 @@
                                       <widget class="GtkLabel" id="hostdev-mode">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label</property>
+                                        <property name="label" translatable="no">label</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -3092,7 +3092,7 @@
                                       <widget class="GtkLabel" id="hostdev-source">
                                         <property name="visible">True</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">label</property>
+                                        <property name="label" translatable="no">label</property>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
