--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -470,7 +470,7 @@ For all domains</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-help</property>
+                <property name="label" translatable="no">gtk-help</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">0</property>
                 <signal name="clicked" handler="on_prefs_help_clicked"/>
@@ -500,7 +500,7 @@ For all domains</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="label" translatable="yes">gtk-close</property>
+                    <property name="label" translatable="no">gtk-close</property>
                     <property name="use_stock">True</property>
                     <property name="response_id">0</property>
                     <signal name="clicked" handler="on_prefs_close_clicked"/>
