--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -2201,7 +2201,7 @@ to connect to the virtual machine.</property>
                                 <property name="visible">True</property>
                                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">keylabel</property>
+                                <property name="label" translatable="no">keylabel</property>
                               </widget>
                               <packing>
                                 <property name="left_attach">2</property>
