--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -2579,7 +2579,7 @@
                         <property name="visible">True</property>
                         <property name="xalign">0</property>
                         <property name="xpad">4</property>
-                        <property name="label" translatable="yes">32</property>
+                        <property name="label" translatable="no">32</property>
                       </widget>
                       <packing>
                         <property name="left_attach">2</property>
