--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -195,7 +195,7 @@
                               <widget class="GtkLabel" id="overview-hypervisor">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Xen</property>
+                                <property name="label" translatable="no">Xen</property>
                               </widget>
                               <packing>
                                 <property name="left_attach">1</property>
