Remove unnecessary hide_all calls (Vitaly Mayatskikh)

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3,7 +3,7 @@
 <!--*- mode: xml -*-->
 <glade-interface>
   <widget class="GtkWindow" id="vmm-details">
-    <property name="visible">True</property>
+    <property name="visible">False</property>
     <property name="title" translatable="yes">Virtual Machine</property>
     <property name="default_width">700</property>
     <property name="default_height">540</property>
