--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -3,7 +3,7 @@
 <!--*- mode: xml -*-->
 <glade-interface>
   <widget class="GtkWindow" id="vmm-manager">
-    <property name="visible">True</property>
+    <property name="visible">False</property>
     <property name="title" translatable="yes">Virtual Machine Manager</property>
     <property name="default_width">700</property>
     <property name="default_height">500</property>
