Use proper border and box spacing for 'Add Hardware' dialog.

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -9,6 +9,8 @@
     <child>
       <widget class="GtkVBox" id="vbox23">
         <property name="visible">True</property>
+        <property name="border_width">6</property>
+        <property name="spacing">6</property>
         <child>
           <widget class="GtkNotebook" id="create-pages">
             <property name="visible">True</property>
