Submit password if the entry box is activated.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -612,6 +612,7 @@
                         <property name="can_focus">True</property>
                         <property name="visibility">False</property>
                         <property name="invisible_char">*</property>
+                        <signal name="activate" handler="on_console_auth_password_activate"/>
                       </widget>
                       <packing>
                         <property name="left_attach">1</property>
