Update authors info.

--- a/src/vmm-about.glade
+++ b/src/vmm-about.glade
@@ -29,9 +29,13 @@
 Hugh O. Brock &lt;hbrock@redhat.com&gt;
 Máirín Duffy &lt;duffy@redhat.com&gt;
 Jeremy Katz &lt;katzj@redhat.com&gt;
+Cole Robinson &lt;crobinso@redhat.com&gt;
 </property>
     <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
-    <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;	</property>
+    <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;
+Mike Langlie &lt;mlanglie@redhat.com&gt;
+Jeremy Perry &lt;jeperry@redhat.com&gt;
+</property>
     <signal name="delete_event" handler="on_vmm_about_delete_event"/>
     <signal name="response" handler="on_vmm_about_response"/>
     <child internal-child="vbox">
