Fix default selection in 'Add Connection' to be dependent on what's available.

--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -107,7 +107,7 @@
               <widget class="GtkComboBox" id="hypervisor">
                 <property name="visible">True</property>
                 <property name="items" translatable="yes">Xen
-QEMU</property>
+QEMU/KVM</property>
                 <accessibility>
                   <atkproperty name="AtkObject::accessible_name" translatable="yes">Hypervisor Select</atkproperty>
                 </accessibility>
