--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -202,7 +202,7 @@
                               <widget class="GtkLabel" id="label12">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Choose how you would like to install the opertaing system</property>
+                                <property name="label" translatable="yes">Choose how you would like to install the operating system</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
